still trying to correct image stretch issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,5 +144,8 @@ body {
         padding-left: 15px;
     }
 
+    p {
+        font-size: 0.75rem;
+    }
 
 }
